# scrapy-influxdb-exporter

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python-publish.yml  workflow.yml
src/scrapy_influxdb_exporter/: __init__.py  exceptions.py  statscollectors.py
