[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-influxdb-exporter"
version = "1.2.0"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "A simple package to export Scrapy spider stats to InfluxDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["influxdb3-python", "scrapy"]

[project.urls]
Homepage = "https://github.com/stefanofusai/scrapy-influxdb-exporter"
Repository = "https://github.com/stefanofusai/scrapy-influxdb-exporter"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "ISC001"]
