[project]
name = "scrapy-influxdb-exporter"
version = "1.3.0"
description = "Export Scrapy spider stats to InfluxDB."
readme = "README.md"
authors = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
maintainers = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "influxdb3-python==0.10.0",
    "scrapy==2.12.0",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/scrapy-influxdb-exporter"
Repository = "https://github.com/stefanofusai/scrapy-influxdb-exporter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
development = [
    "pre-commit==4.0.1",
    "ruff==0.8.2",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "D100",
    "D104"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
